--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.31.1
-selenium==4.18.1
+selenium==4.0.0
 pandas==2.0.3
 beautifulsoup4==4.12.2
-webdriver-manager==3.5.1
+webdriver_manager==4.0.0
